objects/BTx_Engagement_Activity__c.object
<CustomObject>
    <fields>
        <fullName>AS_Engaged_Y_N__c</fullName>
        <inlineHelpText>AS =Cisco Advanced Services</inlineHelpText>
        <label>AS Engaged (Y/N)?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account associated with the BTx</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BTx Projects/Activities</relationshipLabel>
        <relationshipName>BTx</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>Area</description>
        <formula>MID(TEXT(Operation__c), 1, (FIND("-",(TEXT(Operation__c)))-1))</formula>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BTx_Activity_1_Date__c</fullName>
        <description>The date the selected  activity began.</description>
        <inlineHelpText>The date the selected  activity began.</inlineHelpText>
        <label>BTx Activity 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BTx_Activity_1_Description_for_Other__c</fullName>
        <label>BTx Activity 1-Description for 'Other'</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BTx_Activity_1__c</fullName>
        <description>Identify the activity supporting a Business Relevant Engagement.  If the activity is not associated with an engagement, create a Non-Engagement Activity record.</description>
        <label>BTx Activity 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BTx Account Plan Completed</fullName>
                </value>
                <value>
                    <fullName>Strategy Meeting with Account Team Completed</fullName>
                </value>
                <value>
                    <fullName>Documented Account Plan</fullName>
                </value>
                <value>
                    <fullName>Sales/Solution Strategy and Planning</fullName>
                </value>
                <value>
                    <fullName>Account Team Education and Training</fullName>
                </value>
                <value>
                    <fullName>Customer Meeting/Presentation</fullName>
                </value>
                <value>
                    <fullName>Business Relationship Development</fullName>
                </value>
                <value>
                    <fullName>EBC/CBC Presentations and Support</fullName>
                </value>
                <value>
                    <fullName>Partner Enablement</fullName>
                </value>
                <value>
                    <fullName>Other (provide description below)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BTx_Activity_2_Date__c</fullName>
        <description>The date the selected  activity began.</description>
        <label>BTx Activity 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BTx_Activity_2_Description_for_Other__c</fullName>
        <label>BTx Activity 2-Description for 'Other'</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BTx_Activity_2__c</fullName>
        <description>Identify the activity supporting a Business Relevant Engagement.  If the activity is not associated with an engagement, create a Non-Engagement Activity record.</description>
        <label>BTx Activity 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BTx Account Plan Completed</fullName>
                </value>
                <value>
                    <fullName>Strategy Meeting with Account Team Completed</fullName>
                </value>
                <value>
                    <fullName>Documented Account Plan</fullName>
                </value>
                <value>
                    <fullName>Sales/Solution Strategy and Planning</fullName>
                </value>
                <value>
                    <fullName>Account Team Education and Training</fullName>
                </value>
                <value>
                    <fullName>Customer Meeting/Presentation</fullName>
                </value>
                <value>
                    <fullName>Business Relationship Development</fullName>
                </value>
                <value>
                    <fullName>EBC/CBC Presentations and Support</fullName>
                </value>
                <value>
                    <fullName>Partner Enablement</fullName>
                </value>
                <value>
                    <fullName>Other (provide description below)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BTx_Activity_3_Date__c</fullName>
        <description>The date the selected  activity began.</description>
        <label>BTx Activity 3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BTx_Activity_3_Description_for_Other__c</fullName>
        <label>BTx Activity 3-Description for 'Other'</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BTx_Activity_3__c</fullName>
        <description>Identify the activity supporting a Business Relevant Engagement.  If the activity is not associated with an engagement, create a Non-Engagement Activity record.</description>
        <label>BTx Activity 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BTx Account Plan Completed</fullName>
                </value>
                <value>
                    <fullName>Strategy Meeting with Account Team Completed</fullName>
                </value>
                <value>
                    <fullName>Documented Account Plan</fullName>
                </value>
                <value>
                    <fullName>Sales/Solution Strategy and Planning</fullName>
                </value>
                <value>
                    <fullName>Account Team Education and Training</fullName>
                </value>
                <value>
                    <fullName>Customer Meeting/Presentation</fullName>
                </value>
                <value>
                    <fullName>Business Relationship Development</fullName>
                </value>
                <value>
                    <fullName>EBC/CBC Presentations and Support</fullName>
                </value>
                <value>
                    <fullName>Partner Enablement</fullName>
                </value>
                <value>
                    <fullName>Other (provide description below)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BTx_Focus_Partner_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identify the primary partner aligned to this engagement. If no partner is aligned the Partner not required checkbox must be checked.</description>
        <label>Cisco Partner1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BTx Projects/Activities (BTx Focus Partner Name)</relationshipLabel>
        <relationshipName>BTx_Partner1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Biz_Outcome_Expected_Realized_Value__c</fullName>
        <description>Biz. Outcome Expected &amp; Realized Value</description>
        <label>zBiz. Outcome Expected &amp; Realized Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Outcome_Delivered_Date__c</fullName>
        <description>The date the value was last measured</description>
        <inlineHelpText>The date the value was last measured</inlineHelpText>
        <label>Business Outcome Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Outcome_Delivered_Value__c</fullName>
        <description>Last measured value for the outcome you are tracking. This could be interim or final. E.g. 42% market share or 6200 policies per day.</description>
        <inlineHelpText>Last measured value for the outcome you are tracking. This could be interim or final. E.g. 42% market share or 6200 policies per day.</inlineHelpText>
        <label>Business Outcome Delivered Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Outcome_Expected_Date__c</fullName>
        <description>When the customer is targeting the ending value for the outcome</description>
        <inlineHelpText>When the customer is targeting the ending value for the outcome</inlineHelpText>
        <label>Business Outcome Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Outcome_Expected_Units__c</fullName>
        <description>Units for the outcome. E.g. Percent, policies, $, trucks...</description>
        <inlineHelpText>Units for the outcome. E.g. Percent, policies, $, trucks...</inlineHelpText>
        <label>Business Outcome Expected Units</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Outcome_Expected_Value__c</fullName>
        <description>This is the customer ending value for the outcome you are tracking. E.g. 50% market share or 7000 policies per day.</description>
        <inlineHelpText>This is the customer ending value for the outcome you are tracking. E.g. 50% market share or 7000 policies per day.</inlineHelpText>
        <label>Business Outcome Expected Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Outcome_Start_Value__c</fullName>
        <description>This is the customer starting value for the outcome you are tracking. E.g. 30% market share or 5000 policies per day.</description>
        <inlineHelpText>This is the customer starting value for the outcome you are tracking. E.g. 30% market share or 5000 policies per day.</inlineHelpText>
        <label>Business Outcome Start Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Outcome_Type__c</fullName>
        <description>Business Outcome Type</description>
        <label>Business Outcome Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Repeatable: Enable Biz Goals</fullName>
                </value>
                <value>
                    <fullName>Managed: Enable Innovation &amp; Market Leadership</fullName>
                </value>
                <value>
                    <fullName>Optimized: Achieve sustainable Competitive Advantage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Outcome_Validated_Date__c</fullName>
        <description>When the customer has validated the outcome's result</description>
        <inlineHelpText>When the customer has validated the outcome's result</inlineHelpText>
        <label>Business Outcome Validated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Outcome__c</fullName>
        <description>Business Outcome</description>
        <label>Business Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCS_Engaged_Y_N__c</fullName>
        <description>CCS Engaged (Y/N)</description>
        <inlineHelpText>CCS = Cisco Consulting Services</inlineHelpText>
        <label>CCS Engaged (Y/N)?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMS_Engaged_Y_N__c</fullName>
        <description>CMS Engaged (Y/N)</description>
        <inlineHelpText>CMS =Cisco Managed Services</inlineHelpText>
        <label>CMS Engaged (Y/N)?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_Engaged_Y_N__c</fullName>
        <description>CSS Engaged (Y/N)</description>
        <inlineHelpText>CSS = Cisco Security Solutions</inlineHelpText>
        <label>CSS Engaged (Y/N)?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cisco_Approval_Date__c</fullName>
        <description>Cisco Approval Date</description>
        <label>Cisco Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cisco_Capital_Engaged_Y_N__c</fullName>
        <description>Cisco Capital Engaged (Y/N)?</description>
        <label>Cisco Capital Engaged (Y/N)?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>Which competitor(s) are engaged in this opportunity?</description>
        <inlineHelpText>Only those  that are applicable to this Engagement</inlineHelpText>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aastra</fullName>
                </value>
                <value>
                    <fullName>ADC</fullName>
                </value>
                <value>
                    <fullName>Adobe</fullName>
                </value>
                <value>
                    <fullName>Adtran</fullName>
                </value>
                <value>
                    <fullName>Adva</fullName>
                </value>
                <value>
                    <fullName>Advanced Digital Broadcast (ADB)</fullName>
                </value>
                <value>
                    <fullName>Agere</fullName>
                </value>
                <value>
                    <fullName>Alaxala Networks</fullName>
                </value>
                <value>
                    <fullName>Alcatel-Lucent</fullName>
                </value>
                <value>
                    <fullName>Allied Telesis</fullName>
                </value>
                <value>
                    <fullName>Alvarion</fullName>
                </value>
                <value>
                    <fullName>Ambit</fullName>
                </value>
                <value>
                    <fullName>Amino</fullName>
                </value>
                <value>
                    <fullName>Apresia</fullName>
                </value>
                <value>
                    <fullName>Arista</fullName>
                </value>
                <value>
                    <fullName>Arris</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Atrica</fullName>
                </value>
                <value>
                    <fullName>Aurora</fullName>
                </value>
                <value>
                    <fullName>Avail Media</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>Avistar</fullName>
                </value>
                <value>
                    <fullName>B15</fullName>
                </value>
                <value>
                    <fullName>BelAir Networks</fullName>
                </value>
                <value>
                    <fullName>Belden</fullName>
                </value>
                <value>
                    <fullName>BigBand</fullName>
                </value>
                <value>
                    <fullName>BinTec Communications</fullName>
                </value>
                <value>
                    <fullName>Bluecoat</fullName>
                </value>
                <value>
                    <fullName>Brocade</fullName>
                </value>
                <value>
                    <fullName>Carrier Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Acceptance_Date__c</fullName>
        <description>Customer Acceptance Date</description>
        <label>Customer Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Discovery_Phase_Start_Date__c</fullName>
        <description>Customer Discovery Phase Start Date</description>
        <label>Customer Discovery Phase Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Imperative_Other__c</fullName>
        <description>Use this field to document customer business imperative(s) that aren't included in the business imperative pick list.</description>
        <label>Customer Imperative-Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Imperative__c</fullName>
        <label>Customer Imperative</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Differentiated Brand Experiences</fullName>
                </value>
                <value>
                    <fullName>Drive Operational Excellence &amp; Productivity</fullName>
                </value>
                <value>
                    <fullName>Grow Revenue</fullName>
                </value>
                <value>
                    <fullName>Innovate New Products &amp; Services</fullName>
                </value>
                <value>
                    <fullName>Reduce OpEx &amp; CapEx</fullName>
                </value>
                <value>
                    <fullName>Regulatory Compliance</fullName>
                </value>
                <value>
                    <fullName>Respond to Market Change</fullName>
                </value>
                <value>
                    <fullName>Risk, Regulation, &amp; Compliance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Success_Plan__c</fullName>
        <description>Customer Success Plan</description>
        <inlineHelpText>How will you ensure the Customer achieves the biz outcomes &amp; drives utilization?</inlineHelpText>
        <label>Customer Success Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Validation_Date__c</fullName>
        <description>Customer Validation Date</description>
        <label>Customer Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Business_Outcome_Value_Realized__c</fullName>
        <description>Expected Business Outcome Value Realized</description>
        <label>zExpectedBusinessOutcome Value Realized%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Final_Deal_Date__c</fullName>
        <description>Final Deal Date</description>
        <label>Final Deal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Focus_Partner_Scope_of_Involvement_Other__c</fullName>
        <label>Focus Partner-Scope of Involvement-Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Focus_Partner_Scope_of_Involvement__c</fullName>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Focus Partner-Scope of Involvement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Software</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Deployment Hardware</fullName>
                </value>
                <value>
                    <fullName>Financial Business Case</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Solution Provider</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Technical Discovery/POC</fullName>
                </value>
                <value>
                    <fullName>Value Realization Analysis</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Focus_Partner__c</fullName>
        <label>Focus Partner</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Vertical__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Advito</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Attunity</fullName>
                </value>
                <value>
                    <fullName>Avizia</fullName>
                </value>
                <value>
                    <fullName>BHDP</fullName>
                </value>
                <value>
                    <fullName>Black Box</fullName>
                </value>
                <value>
                    <fullName>Bucher + Suter</fullName>
                </value>
                <value>
                    <fullName>CDW</fullName>
                </value>
                <value>
                    <fullName>Cerner</fullName>
                </value>
                <value>
                    <fullName>Cisco Direct</fullName>
                </value>
                <value>
                    <fullName>ClearSky Technologies</fullName>
                </value>
                <value>
                    <fullName>Cloudera</fullName>
                </value>
                <value>
                    <fullName>Cognizant</fullName>
                </value>
                <value>
                    <fullName>Cushman Wakefield</fullName>
                </value>
                <value>
                    <fullName>Dimension Data</fullName>
                </value>
                <value>
                    <fullName>eGain</fullName>
                </value>
                <value>
                    <fullName>eLoyalty</fullName>
                </value>
                <value>
                    <fullName>Enterprise Strategies</fullName>
                </value>
                <value>
                    <fullName>Extension Healthcare</fullName>
                </value>
                <value>
                    <fullName>FICO</fullName>
                </value>
                <value>
                    <fullName>Flexwork Global</fullName>
                </value>
                <value>
                    <fullName>FOW</fullName>
                </value>
                <value>
                    <fullName>Fujitsu</fullName>
                </value>
                <value>
                    <fullName>Fusion Consulting</fullName>
                </value>
                <value>
                    <fullName>FutureWorkplace</fullName>
                </value>
                <value>
                    <fullName>GDT</fullName>
                </value>
                <value>
                    <fullName>GE Healthcare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Sponsor_2_Contact_Information__c</fullName>
        <description>IT Sponsor 2 Contact Information</description>
        <label>ZZ_IT Sponsor 2 Contact Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_Sponsor_2_Name__c</fullName>
        <description>IT Sponsor 2 Name</description>
        <label>ZZ_IT Sponsor 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Sponsor_2_Relationship_Start_Date__c</fullName>
        <description>IT Sponsor 2 Relationship Start Date</description>
        <label>ZZ_IT Sponsor 2 Relationship Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Sponsor_2__c</fullName>
        <description>IT Sponsor 2</description>
        <label>ZZ_IT Sponsor 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>CMIO</fullName>
                </value>
                <value>
                    <fullName>CMO</fullName>
                </value>
                <value>
                    <fullName>CMO-HC</fullName>
                </value>
                <value>
                    <fullName>CNO</fullName>
                </value>
                <value>
                    <fullName>CXO-Other</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Sr. Manager/Manager</fullName>
                </value>
                <value>
                    <fullName>SVP</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Sponsor_Contact_Information__c</fullName>
        <description>IT Sponsor Contact Information</description>
        <label>ZZ_IT Sponsor Contact Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_Sponsor_Name__c</fullName>
        <description>IT Sponsor Name</description>
        <label>ZZ_IT Sponsor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Sponsor_Relationship_Start_Date__c</fullName>
        <description>IT Sponsor Relationship Start Date</description>
        <label>ZZ_IT Sponsor Relationship Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Sponsor__c</fullName>
        <label>ZZ_IT Sponsor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>CMIO</fullName>
                </value>
                <value>
                    <fullName>CMO</fullName>
                </value>
                <value>
                    <fullName>CMO-HC</fullName>
                </value>
                <value>
                    <fullName>CNO</fullName>
                </value>
                <value>
                    <fullName>CXO-Other</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Sr. Manager/Manager</fullName>
                </value>
                <value>
                    <fullName>SVP</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identify_and_Design_Phase_Start_Date__c</fullName>
        <description>Identify and Design Phase Start Date</description>
        <label>Identify and Design Phase Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Cisco_Partner_1_Primary_Partner__c</fullName>
        <label>Is Cisco Partner 1 Primary Partner?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Cisco_Partner_2_Primary_Partner__c</fullName>
        <label>Is Cisco Partner 2 Primary Partner?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Cisco_Partner_3_Primary_Partner__c</fullName>
        <label>Is Cisco Partner 3 Primary Partner?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Focus_Partner_Primary_Partner__c</fullName>
        <label>Is Focus Partner Primary Partner?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB_Sponsor_2_Contact_Information__c</fullName>
        <description>LOB Sponsor 2 Contact Information</description>
        <label>ZZ_LOB Sponsor 2 Contact Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOB_Sponsor_2_Name__c</fullName>
        <description>LOB Sponsor 2 Name</description>
        <label>ZZ_LOB Sponsor 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB_Sponsor_2_Relationship_Start_Date__c</fullName>
        <description>LOB Sponsor Relationship Start Date</description>
        <label>ZZ_LOB Sponsor 2 Relationship Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOB_Sponsor_2__c</fullName>
        <label>ZZ_LOB Sponsor 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>CMIO</fullName>
                </value>
                <value>
                    <fullName>CMO</fullName>
                </value>
                <value>
                    <fullName>CMO-HC</fullName>
                </value>
                <value>
                    <fullName>CNO</fullName>
                </value>
                <value>
                    <fullName>CXO-Other</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Sr. Manager/Manager</fullName>
                </value>
                <value>
                    <fullName>SVP</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB_Sponsor_Contact_Information__c</fullName>
        <description>LOB Sponsor Contact Information</description>
        <label>ZZ_LOB Sponsor Contact Information</label>
        <type>TextArea</type>
    </fields>
</CustomObject>